# spectator

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  README.md  SCHEMA.md  Spectator.sln  ansible.yml  docker-compose.caddy.yml  docker-compose.dcproj  docker-compose.dev.yml  docker-compose.influx.yml  docker-compose.minio.yml  docker-compose.override.yml  docker-compose.worker.yml  docker-compose.yml  workspace.code-workspace
.github/: PULL_REQUEST_TEMPLATE.md
assertion/: .gitignore  README.md
backend/: .editorconfig  .gitignore  Directory.Build.props  Dockerfile  Program.cs  README.md  Specatator.csproj  Spectator.csproj  WeatherForecast.cs  backend.sln
data/: .gitignore
diagrams/: README.md
dummy/: .editorconfig  .env.example  Dockerfile  Pipfile  README.md  generate.py  generate_key_event.py  inserter.py  keystroke_event.json  model_user.py  (+8 more)
logger/: .editorconfig  .env  .env.example  .gitignore  .pylintrc  Dockerfile  README.md  converter.go  go.mod  go.sum  handler_error.go  handler_error_test.go  handler_grpc.go  handler_grpc_test.go  handler_log.go  handler_log_test.go  handler_notallowed.go  handler_notallowed_test.go  handler_notfound.go  handler_ping.go  handler_ping_test.go  log.go  logger.proto  main.go  main_test.go  ping.go  ping_test.go  prepare_bucket.go  pyproject.toml  reader.go  reader_test.go  writer.go  writer_test.go
logger/logger/: __init__.py  app.py  influx.py  payload.py  router.py
logger/proto/: logger.pb.go  logger_grpc.pb.go
logger/tests/: test_logger.py  test_logging.py
(+862 files in other folders)
